# chrome-ec

./: .checkpatch.conf  .clang-format  .gitignore  .gitlab-ci.yml  .pylintrc  Android.bp  COMMIT-QUEUE.ini  DIR_METADATA  Kconfig  Makefile  Makefile.rules  Makefile.toolchain  OWNERS  OWNERS.android  PRESUBMIT.cfg  README  README.md  firmware_builder.py  navbar.md  private-cr52  private-cr53  pylintrc  setup.py
android/: android_generated_version.h
bazel/: all_targets.generated.bzl  deps.bzl
board/: caroline_pd  hana
boot_param/: .gitignore  BUILD.bazel  Makefile  boot_param.c  boot_param.h  boot_param_platform.h  boot_param_platform_host.c  boot_param_platform_host.h  boot_param_types.h  cbor_basic.h  cbor_boot_param.h  cbor_dice.h  cdi.h  dice.c  dice.h  dice_types.h  test.c
builtin/: assert.h  endian.h  limits.h  math.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdnoreturn.h  string.h
common/: acpi.c  adc.c  als.c  ap_hang_detect.c  ap_ro_integrity_check.c  audio_codec.c  audio_codec_dmic.c  audio_codec_i2s_rx.c  audio_codec_wov.c  backlight_lid.c  base32.c  base64.c  base_state.c  battery.c  battery_bq20z453.c  battery_leon.c  battery_link.c  battery_precharge.c  battery_skate.c  battery_spring.c  battery_v2.c  battery_wolf.c  body_detection.c  btle_ll.c  build.mk  button.c  capsense.c  case_closed_debug.c  cbi.c  ccd_config.c  cec.c  charge_manager.c  charge_ramp.c  charge_ramp_sw.c  charge_state.c  charge_state_v1.c  charge_state_v2.c  chargen.c  charger.c  charger_bq24707a.c  (+181 more)
cts/: cts.py
zephyr/drivers/dsp_comms/: CMakeLists.txt  Kconfig  Kconfig.client  Kconfig.service  README.md  test_comms.cc
zephyr/drivers/dsp_comms/client/: CMakeLists.txt  dsp_client.c  remote_cbi.c  remote_lid_angle.c  remote_lid_switch.c  remote_tablet_switch.c
zephyr/drivers/dsp_comms/client/include/cros/dsp/: client.h
zephyr/drivers/dsp_comms/proto/: ec_dsp.options  ec_dsp.proto
zephyr/drivers/dsp_comms/service/: CMakeLists.txt  dsp_service.cc  i2c_target_buffer_funcs.cc  i2c_target_pio_funcs.cc
zephyr/drivers/dsp_comms/service/include/cros/dsp/service/: cros_transport.hh  driver.hh
zephyr/test/dsp_comms/: CMakeLists.txt  prj.conf  test_main.cc  testcase.yaml
zephyr/test/dsp_comms/boards/: native_sim.buffered_i2c.overlay  native_sim.edge_trigger.overlay  native_sim.overlay
(+3375 files in other folders)
